--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2.2'
+version: '3.3'
 services:
   es01:
     build: elasticsearch
@@ -56,7 +56,6 @@ services:
       - data03:/usr/share/elasticsearch/data
     networks:
       - elastic
-  # kibana追加
   kibana:
     image: docker.elastic.co/kibana/kibana:7.7.0
     ports:
@@ -66,6 +65,17 @@ services:
       MONITORING_ENABLED: "false"
     networks:
       - elastic
+  mysql:
+    build: mysql
+    container_name: mysql
+    environment:
+      MYSQL_DATABASE: test_db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: rootpassword
+      TZ: 'Asia/Tokyo'
+    ports:
+      - 3306:3306
 
 volumes:
   data01:
